--- a/web/AuDD/css/animate.css
+++ b/web/AuDD/css/animate.css
@@ -1190,6 +1190,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 .fadeInUp {
   -webkit-animation-name: fadeInUp;
   animation-name: fadeInUp;
+  margin-left: 200;
 }
 
 @-webkit-keyframes fadeInUpBig {
