--- a/web/AuDD/css/style.css
+++ b/web/AuDD/css/style.css
@@ -1767,7 +1767,7 @@ padding: 120px 10px 50px 350px;
 .cta-sub {
 	padding-top: 150px;
 	padding-bottom: 150px;
-	background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url(../images/cta_bg.jpg) no-repeat center center;
+	background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url(../images/IT.jpg) no-repeat center center;
 	background-size: cover;
 }
 
